@startuml


class User {
    +int id
    +String name
    +String surname
    +String username
    +String password
    +int id_rol
}


class Post {
    +int id
    +String author
    +String title
    +String body
    +DateTime date
}


User "1" -- "0..*" Post : sube
Post "0..*" -- "1" User : subido_por

@enduml